
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AFDADA">

        <EditText
            android:id="@+id/inombre"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="540dp"
            android:ems="10"
            android:hint="@string/inombre"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/itelefono"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="488dp"
            android:ems="10"
            android:hint="@string/itelefono"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/icorreo"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="440dp"
            android:ems="10"
            android:hint="@string/icorreo"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="384dp"
            android:text="Seleccione un rol"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="264dp"
            android:layout_height="28dp"
            android:layout_marginBottom="340dp"
            android:background="@drawable/spinner_fondo"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>